--- a/src/styles/styleTask.css
+++ b/src/styles/styleTask.css
@@ -1,7 +1,61 @@
 .addTaskBtn {
   background-color: transparent;
   text-align: center;
-  vertical-align: center;
   width: 100px;
   padding: 5px 10px;
+}
+
+.taskForm {
+  display: grid;
+  grid-template: 22px 22px/1fr 1fr;
+  gap: 5px;
+  margin-top: 5px;
+  max-width: 400px;
+}
+
+.taskForm > button,
+.taskForm > input {
+  height: 20px;
+}
+
+#taskInput {
+  grid-column: 1/3;
+}
+
+.taskAddBtn,
+.taskCancelBtn,
+.removeTaskBtn {
+  border: 1px solid gray;
+}
+
+.taskAddBtn {
+  background-color: rgb(137, 245, 146);
+}
+
+.taskCancelBtn {
+  background-color: rgb(241, 124, 124);
+}
+
+.task {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 5px;
+  align-items: center;
+}
+
+.removeTaskBtn {
+  background-color: rgb(241, 124, 124);
+  padding: 5px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
